<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/helloweatherr"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_search_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_get_location"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:padding="2dp"
            android:src="@android:drawable/ic_menu_mylocation"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/image_search_city"
            android:layout_toEndOf="@id/image_get_location"
            android:backgroundTint="@android:color/transparent"
            android:padding="1dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/image_search_city"
                android:layout_toEndOf="@id/image_get_location"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/search"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_search_city"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_baseline_search_24"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/rl_search_location">

        <TextView
            android:id="@+id/tv_get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:drawablePadding="5dp"
            android:text="@string/get_location"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_weather_main"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_temp"
            android:layout_alignEnd="@+id/tv_temp"
            android:layout_marginTop="5dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_temp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/more_details"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_details"
            android:layout_marginTop="15dp"
            android:background="@drawable/backgr_more_inform">

            <RelativeLayout
                android:id="@+id/rl_right"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/tv_humidity"
                    style="@style/style_tvs_more_inform"
                    android:text="@string/humidity"
                    app:drawableStartCompat="@mipmap/humidity" />

                <TextView
                    android:id="@+id/tv_pressure"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@+id/tv_humidity"
                    android:text="@string/pressure"
                    app:drawableStartCompat="@mipmap/pressure" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@+id/tv_pressure"
                    android:text="@string/wind_speed"
                    app:drawableStartCompat="@mipmap/wind" />

                <TextView
                    android:id="@+id/tv_sunrise"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@+id/tv_wind_speed"
                    android:text="@string/sunrise"
                    app:drawableStartCompat="@mipmap/sunrise" />

                <TextView
                    android:id="@+id/tv_sunset"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@+id/tv_sunrise"
                    android:text="@string/sunset"
                    app:drawableStartCompat="@mipmap/sunset" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/tv_feels_like"
                    style="@style/style_tvs_more_inform"
                    android:text="@string/feels_like"
                    app:drawableStartCompat="@mipmap/temperature" />

                <TextView
                    android:id="@+id/tv_visibility"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@+id/tv_feels_like"
                    android:text="@string/visibility"
                    app:drawableStartCompat="@mipmap/visibility" />

                <TextView
                    android:id="@+id/tv_temp_max"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@id/tv_visibility"
                    android:text="@string/max_temp"
                    app:drawableStartCompat="@mipmap/max_temp" />

                <TextView
                    android:id="@+id/tv_temp_min"
                    style="@style/style_tvs_more_inform"
                    android:layout_below="@+id/tv_temp_max"
                    android:text="@string/temp_min"
                    app:drawableStartCompat="@mipmap/min_temp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_lottie_views"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/tv_get_location"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons"
                app:lottie_repeatMode="restart"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons1"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons2"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons3"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons4"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons5"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons6"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons7"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons8"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons9"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons10"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons11"
                style="@style/style_lottie_view_weather_ic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_icons12"
                style="@style/style_lottie_view_weather_ic" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_weather_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_lottie_views"
            android:layout_alignEnd="@+id/rl_lottie_views"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/main_status"
            android:textColor="@color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_weather_descr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_lottie_views"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>